--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "cheerio": "^1.1.2",
     "framer-motion": "^12.23.26",
     "gray-matter": "^4.0.3",
     "next": "16.1.1",
